objects/CMN_JobScheduler__c.object
<CustomObject>
    <description>An object that can be used to manage CronTriggers (Scheduled Jobs) in a managed manager. Only accessible by Administrators.</description>
    <fields>
        <fullName>CMN_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Set this flag too true to ensure the scheduled job is initiated. If an error occurs this flag will be reset too false. In addition when a scheduled job is terminated this flag will also be set to false.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_CronExpression__c</fullName>
        <description>This is a Salesforce specific Cron (https://en.wikipedia.org/wiki/Cron) expression that will be used to schedule jobs. The supported syntax can be found here (https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_scheduler.htm)</description>
        <label>Cron Expression</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Description__c</fullName>
        <description>Enter Brief Description</description>
        <inlineHelpText>Describes what the Job does and how often it runs</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMN_JobName__c</fullName>
        <description>The name of the scheduled job, composed from Cron expression and Class being run</description>
        <formula>CMN_SchedulerName__c + &apos; - &apos; + &apos;(&apos; +  CMN_CronExpression__c + &apos;)&apos;</formula>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ScheduleClassName__c</fullName>
        <description>The APEX class that supports the Schedular framework and can be scheduled.</description>
        <label>Schedule Class Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ScheduledJobId__c</fullName>
        <description>The Salesforce Id for the Job that was initiated for the current Job Schedular row.</description>
        <label>Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMN_SchedulerName__c</fullName>
        <description>This is the user friendly name to be be provided when setting up a Schedule</description>
        <label>Scheduler Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Job Scheduler</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CMN_SchedulerName__c</columns>
        <columns>CMN_ScheduleClassName__c</columns>
        <columns>CMN_CronExpression__c</columns>
        <columns>CMN_Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CMN_AllJobSchedulers</fullName>
        <columns>CMN_JobName__c</columns>
        <columns>NAME</columns>
        <columns>CMN_SchedulerName__c</columns>
        <columns>CMN_ScheduleClassName__c</columns>
        <columns>CMN_CronExpression__c</columns>
        <columns>CMN_Active__c</columns>
        <columns>CMN_Description__c</columns>
        <columns>CMN_ScheduledJobId__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Job Schedulers</label>
    </listViews>
    <nameField>
        <displayFormat>SCHED-{0000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Schedulers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>